rust/kcl-lib/tests/property_access_not_found_on_solid/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing property_access_not_found_on_solid.kcl
---
KCL Semantic error

  × semantic: Property `tags` not found on a solid. You can get a solid's tags
  │ through its sketch, as in, `exampleSolid.sketch.tags`.
    ╭─[13:43]
 12 │ 
 13 │ sketch001 = startSketchOn(myShape, face = myShape.tags.seg01)
    ·                                           ──────┬─────
    ·                                                 ╰── tests/property_access_not_found_on_solid/input.kcl
 14 │ 
    ╰────
